Akregator ChangeLog
===================
(c) 2004-2006 the Akregator authors.

Changes after 1.2.2:
-----------------------------

New features:

 2006/05/01 add author information to article header (in the article pane only) -fo

Bug fixes:

 2006/05/20 Select oldest item instead of newest when jumping to the next feed using previous [unread] 
            article actions (#126316) -fo
 2006/05/20 Disable Apply-Button in config dialog correctly if no changes were made (#103820) -fo
 2006/05/20 Don't reset article status to New when the article changed (#101907) -fo
 2006/05/10 Always show feed logos; load them on startup, not on first fetch -fo
 2006/05/10 fix crash when using "Load the full website when reading articles" and an error (e.g. 404) 
            is returned (#126812) -fo 
 2006/04/29 Do not crash on startup when Combined View mode is activated (Happened only when experimental tagging is 
            activated) -fo
 2006/03/22 Prevent "Akregator is running" messages on startup (reset PID to -1 when closing akregator) -fo

Changes after 1.2.1:
-----------------------------

Bug fixes:

 2006/03/09 Read more feed metadata for Atom feeds (title, link) (#123140) -fo
 2006/03/09 Use "refresh" cache mode as default, ignoring konq settings. 
            ("refresh" == Use cache after verifying with server) 
            This should make disabling the "Use browser cache" option unnecessary. -fo
 2006/02/21 Set "rel" attribute default to "alternate", as requested by Atom specification (#122409) -ew
 2006/02/21 Disable category and tag support (unless experimental GUI is enabled) in the metakit backend, 
            so it supports about 1000 feeds (500 with tags enabled) instead of 340
            now with the default 1024 open files limit on most systems. -fo
 2006/02/15 Combined View: Do not crash on "Next/Prev Unread Article" (#121999) -fo
 2006/01/31 RSS parser: ignore unknown or invalid version attribute value in the <rss> tag and